[#9631] Add new optional parameter `filters` to errorList API